<?xml version="1.0"?>
<package format="2">
  <name>distributed_randomized_sequential_partitions</name>
  <version>0.0.0</version>

  <description>Distributed Randomized Sequential Partitions (RSP)</description>

  <maintainer email="micahcorah@gmail.com">Micah Corah</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
